add site logo and map as background

--- a/assets/style.css
+++ b/assets/style.css
@@ -37,4 +37,14 @@ html, body {
 #location-search-wrapper{
     height: calc(100% - 150px)
 }
-  
+
+
+#map {
+    height: 100%;
+    position: absolute; 
+    top: 0; 
+    bottom: -200px; 
+    left: 0; 
+    right: 0; 
+    z-index: 0;
+}
