fixing modal size to take 100% w/h

--- a/assets/style.css
+++ b/assets/style.css
@@ -46,6 +46,8 @@ body {
   border: 25px solid var(--green);
   border-radius: 25px;
   padding: 30px;
+  width: 100%;
+  height: 100%;
 }
 
 #location-search-wrapper {
