--- a/assets/style.css
+++ b/assets/style.css
@@ -54,6 +54,32 @@ body {
   height: calc(100% - 150px);
 }
 
+#box {
+  /* @include ( */
+  z-index: 100;
+  position: relative;
+  background-color: var(--blue);
+  border: solid 5px var--(white);
+  height: 50%;
+  width: 20%;
+  margin-top: 30px;
+  margin: 8px;
+  color: black;
+  padding: 20px;
+  adjust: true;
+  /* ); */
+}
+
+#side-info {
+  z-index: 100;
+  position: relative;
+  height: 90%;
+  width: 90%;
+  display: block;
+  border: solid 2px orange;
+  background-color: var--(white);
+}
+
 #map {
   height: 100%;
   position: absolute;
@@ -63,3 +89,5 @@ body {
   right: 0;
   z-index: 0;
 }
+
+
