--- a/assets/style.css
+++ b/assets/style.css
@@ -54,21 +54,17 @@ body {
 }
 
 #box {
-  /* @include ( */
   z-index: 100;
   position: relative;
   background-color: var(--blue);
-  border: solid 5px var--(white);
+  border: solid 10px #c8b953;
   height: 50%;
   width: 20%;
-  margin-top: 30px;
-  margin: 8px;
+  margin: 20px;
   color: black;
   padding: 20px;
-  adjust: true;
-  /* ); */
 }
-
+/* 
 #side-info {
   z-index: 100;
   position: relative;
@@ -77,7 +73,7 @@ body {
   display: block;
   border: solid 2px orange;
   background-color: var--(white);
-}
+} */
 
 #map {
   height: 100%;
