--- a/assets/style.css
+++ b/assets/style.css
@@ -57,26 +57,26 @@ body {
   z-index: 100;
   position: relative;
   background-color: var(--blue);
-  border: solid 10px #c8b953;
+  border: solid 10px white;
   height: 60%;
   width: 20%;
-  margin: 20px;
+  margin: 30px;
   color: black;
   padding: 20px;
   overflow-x: hidden;
   overflow-y: auto;
-}
+} 
+/* make #box mobile responsive */
 
 .site-info {
   z-index: 100;
   position: relative;
   height: 100%;
-  width: 90%;
+  width: 100%;
   display: block;
-  border: solid 2px white;
-  margin: 2px;
-  padding: 1px;
-  background-color: var--(white);
+  border: dotted 2px white;
+  margin-bottom: 5%;
+  padding: 3px;
 }
 
 #map {
@@ -87,4 +87,14 @@ body {
   left: 0;
   right: 0;
   z-index: 0;
+}
+
+#my-location {
+  margin: 0 auto;
+  display: block;
+  font-size: 17px;
+}
+
+#enter-location {
+  text-align: center;
 }
