--- a/assets/style.css
+++ b/assets/style.css
@@ -66,7 +66,7 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
 } 
-/* make #box mobile responsive */
+/* make #box responsive */
 
 .site-info {
   z-index: 100;
