--- a/assets/style.css
+++ b/assets/style.css
@@ -81,11 +81,23 @@ body {
 
 #past-locations{
   z-index: 100;
-  transform: translate(200%, -60%);
+  transform: translate(200%, -80%);
   background-color: var(--blue);
   max-width: 30%;
   border: solid 10px white;
+  padding: 30px;
   display:none;
+}
+
+button {
+  background-color: var(--rose);
+  color: var(--white);
+  padding: 20px;
+  margin: 20px;
+}
+
+button:hover{
+  box-shadow: 0px 0px 20px white;
 }
 
 #map {
