--- a/assets/style.css
+++ b/assets/style.css
@@ -65,7 +65,16 @@ body {
   padding: 20px;
   overflow-x: hidden;
   overflow-y: auto;
-} 
+}
+
+/* Adjust the size of the Sites near you on medium and small devices */
+@media screen and (max-width: 50em) {
+  #box {
+    width: 40%;
+    height: 40%;
+  }
+}
+
 /* make #box responsive */
 
 .site-info {
@@ -79,14 +88,30 @@ body {
   padding: 3px;
 }
 
-#past-locations{
+#past-locations {
   z-index: 100;
   transform: translate(200%, -80%);
   background-color: var(--blue);
   max-width: 30%;
   border: solid 10px white;
   padding: 30px;
-  display:none;
+  display: none;
+}
+
+/* Adjust the size of the button on medium and small devices */
+@media screen and (max-width: 50em) {
+  #past-locations {
+    width: 50%;
+    height: 40%;
+  }
+}
+
+/* Medium and up */
+@media screen and (min-width: 40em) {
+  #past-locations {
+    width: 30%;
+    height: 60%;
+  }
 }
 
 button {
@@ -96,7 +121,7 @@ button {
   margin: 20px;
 }
 
-button:hover{
+button:hover {
   box-shadow: 0px 0px 20px white;
 }
 
@@ -121,18 +146,30 @@ button:hover{
 }
 
 /* This button is a central focus of our app, styling to accentuate it*/
-#get-tested-button{
-    border: 25px solid #d38681;
-    border-radius: 15px;
-    background-image: "url('assets/images/test-graphic.png')";
-    transform: translate(0, -30%);
+
+#get-tested-button {
+  border: 25px solid #d38681;
+  border-radius: 15px;
+  background-image: "url('assets/images/test-graphic.png')";
+  transform: translate(0, -30%);
 }
 
- /* add shadow to to outer picture on hover*/
-#get-tested-button img:hover{
-    box-shadow: 0px 0px 20px white;
+/* Adjust the size of the button on medium and small devices */
+@media screen and (max-width: 50em) {
+  #get-tested-button {
+    border: 10px solid #d38681;
+    border-radius: 10px;
+    width: 100px;
+    height: 100px;
+    transform: translate(0, -30%);
+  }
 }
- /* add highlit to inner picture on hover*/
-#get-tested-button:hover{
-    box-shadow: 10px 10px 5px grey;
+
+/* add shadow to to outer picture on hover*/
+#get-tested-button img:hover {
+  box-shadow: 0px 0px 20px white;
+}
+/* add highlit to inner picture on hover*/
+#get-tested-button:hover {
+  box-shadow: 10px 10px 5px grey;
 }
