--- a/assets/style.css
+++ b/assets/style.css
@@ -56,6 +56,7 @@ body {
 #box {
   z-index: 100;
   position: relative;
+  float: left;
   background-color: var(--blue);
   border: solid 10px white;
   height: 60%;
@@ -82,14 +83,30 @@ body {
 }
 
 #past-locations {
+  display: none;
   z-index: 100;
+  position: relative;
+  float: right;
+  /* transform: translate(230%, -90%); */
+  background-color: var(--blue);
+  border: solid 10px white;
+  height: 60%;
+  width: 20%;
+  margin: 30px;
+  color: black;
+  padding: 20px;
+  overflow-x: hidden;
+  overflow-y: auto;
+ 
+
+  /* z-index: 100;
   transform: translate(200%, -80%);
   background-color: var(--blue);
   max-width: 30%;
   border: solid 10px white;
   padding: 30px;
   display: none;
-  overflow: auto;
+  overflow: auto; */
 }
 
 button {
