--- a/assets/about.css
+++ b/assets/about.css
@@ -11,8 +11,8 @@
   html,
   body {
     margin: 0;
-    padding: 0;
     height: 100%;
+    box-sizing: border-box;
   }
   
   .top-bar {
@@ -37,6 +37,14 @@
   
   button:hover {
     box-shadow: 0px 0px 20px white;
+  }
+
+  .cell {
+      padding:40px;
+  }
+
+  .card {
+      margin:40px;
   }
   
   
